# tateti

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  juego.cpp  juego.h  jugador.cpp  jugador.h  tablero.cpp  tablero.h
